[gd_scene format=3 uid="uid://oeftdfiecd8l"]

[ext_resource type="Script" uid="uid://ooqsbteuqh6p" path="res://scripts/rpc_client.gd" id="1_v4jyh"]
[ext_resource type="PackedScene" uid="uid://dvk38ts0604j6" path="res://scenes/chat_control.tscn" id="2_vturw"]

[node name="Main" type="Control" unique_id=1868306193]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4jyh")

[node name="Label" type="Label" parent="." unique_id=2015251946]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="AvatarCardsScrollContainer" type="ScrollContainer" parent="." unique_id=614868319]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AvatarCardsHBoxContainer" type="HBoxContainer" parent="AvatarCardsScrollContainer" unique_id=725740445]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChatControl" parent="." unique_id=1882942472 instance=ExtResource("2_vturw")]
layout_mode = 1
